<resources>
    <string name="app_name">IMedical</string>
    <string name="login">Login</string>
    <string name="email_mobile_hint">Mobile Number or E-Mail Address</string>
    <string name="password_hint">Password</string>
    <string name="submit_hint">Submit</string>
    <string name="forgot_pass_link">I Forgot my password</string>
    <string name="no_account_link">No account? Register here.</string>
    <string name="register">Register</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail Address</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="pass_confirm_hint">Password Confirmation</string>
    <string name="have_account">Have an account? Login.</string>
    <string name="registration_agreement">By registering you agree to our privacy policy and conditions of use.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Login/Join</string>
    <string name="nav_header_subtitle">Welcome</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_compare_list">Compare List</string>
    <string name="menu_about">About IMedical</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="check_connection">Check you internet connection</string>

    <string name="verification_title">Verification</string>
    <string name="verification_description">Please enter the verification code sent to you</string>
    <string name="verification_hint">Verification code</string>
    <string name="empty_verification_code">Verification code can not be empty</string>
    <string name="resend_code">Resend code</string>
    <string name="forget_password_title">Trouble logging in?</string>
    <string name="forget_password_msg">Enter your mobile number
        and we will send you a code to get back into your account.
    </string>
    <string name="btn_send">Send</string>
    <string name="verify_password_title">Verify your account</string>
    <string name="verify_password_msg">Please enter the code sent to you</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_resend">
        <u>Resend code</u>
    </string>
    <string name="verification_code_sent">Code has been sent successfully</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_msg">Please choose a new password to replace the old one</string>
    <string name="reset_password_empty">Password cannot be empty</string>
    <string name="reset_password_dont_match">Password and password confirmation
        must be the same</string>
    <string name="reset_password_successfully">You have successfully reset your password,
        please login now with your new password</string>

    <string name="deals_of_day">Deals of the day</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="add_to_cart">Add to Cart</string>

    <string name="wish_list">My Wishlist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compare_list_title">Compare List</string>
    <string name="categories_title">Categories</string>
    <string name="added_to_compare_message">Added to Compare list</string>
    <string name="removed_from_compare_message">Removed from Compare list</string>

    <string name="addresses_empty">You have no addresses yet, you can add one</string>
    <string name="addresses_error">Something went wrong</string>
    <string name="add_addresses_title">Create your Address</string>
    <string name="add_addresses_alias">Alias</string>
    <string name="add_addresses_address1">Address 1</string>
    <string name="add_addresses_address2">Address 2</string>
    <string name="add_addresses_country">Country</string>
    <string name="add_addresses_zip">Zip Code</string>
    <string name="add_addresses_phone">Your phone</string>
    <string name="add_addresses_create">Create</string>
    <string name="add_addresses_alias_empty">The alias field is required.</string>
    <string name="add_addresses_address_empty">The address 1 field is required.</string>
    <string name="add_addresses_phone_empty">The phone field is required.</string>
    <string name="add_addresses_success_msg">Your address crated successfully</string>
    <string name="add_addresses_failure_msg">Something went wrong, We couldn\'t create your address</string>

    <string-array name="countries_list">
        <item>Egypt</item>
    </string-array>

    <string name="update_addresses_title">Update your Address</string>
    <string name="update_addresses_button">Update</string>
    <string name="update_addresses_success_msg">Your address updated successfully</string>
    <string name="update_addresses_failure_msg">Something went wrong, We couldn\'t update your address</string>

</resources>
