<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_sm"
                android:title="@string/menu_home"/>

        <item android:id="@+id/nav_login"
            android:icon="@drawable/ic_logout"
                android:title="Login"/>

        <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_add_shopping_cart"
                android:title="Shop"/>
        <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_menu_sm"
                android:title="@string/menu_categories"/>

        <item

                android:id="@+id/nav_wish_list"
                android:icon="@drawable/ic_wish_border_sm"
                android:iconTint="@color/faded_blue"
                android:title="@string/menu_wish_list"/>
        <item
                android:id="@+id/nav_compare_list"
                android:icon="@drawable/ic_compare_sm"
                android:title="@string/menu_compare_list"/>
    </group>

    <item android:title="">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_sm"
                    android:title="@string/menu_settings"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_input_24px"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
