<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/registration_padding"
        tools:context=".verification.presentation.fragment.VerificationFragment">


    <TextView
            android:id="@+id/tvVerificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/verification_title"
            android:textSize="@dimen/title_size"
            android:textColor="@color/colorBlack"
    />

    <RelativeLayout
            android:id="@+id/lyVerificationError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvVerificationTitle"
            android:background="@drawable/error_layout_bg"
            android:layout_marginTop="@dimen/registration_margin"
            android:layout_marginBottom="@dimen/registration_margin"
            android:visibility="gone"
            android:padding="@dimen/registration_margin">
        <TextView
                android:id="@+id/tvVerificationError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorError"
        />
    </RelativeLayout>

    <TextView
            android:id="@+id/tvVerificationDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyVerificationError"
            android:text="@string/verification_description"
            android:textColor="@color/colorPrimaryDark"
    />
    <EditText android:id="@+id/edtVerificationCode"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/rect_edittext_drawable"
              app:layout_constraintTop_toBottomOf="@id/tvVerificationDesc"
              android:hint="@string/verification_hint"
              android:layout_marginTop="@dimen/dimen_60"
              android:textSize="@dimen/edittext_text_size"
              android:inputType="number"
    />

    <TextView
            android:id="@+id/tvResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtVerificationCode"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/registration_padding"
            android:text="@string/resend_code"
    />

    <Button android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_hint"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dimen_60"
            app:layout_constraintTop_toBottomOf="@+id/tvResendCode"/>

</android.support.constraint.ConstraintLayout>