<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvAddAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:text="@string/add_addresses_title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddressAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_marginEnd="@dimen/dimen_20"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddAddressTitle"
            tools:ignore="RtlCompat"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddAddressAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/add_addresses_alias" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddressAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddAddressAlias"
            tools:ignore="RtlCompat"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddAddressAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/add_addresses_address1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddressAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddAddressAddress1"
            tools:ignore="RtlCompat"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddAddressAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/add_addresses_address2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddressCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddAddressAddress2"
            tools:ignore="RtlCompat"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddAddressCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/add_addresses_country" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddressZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddAddressCountry"
            tools:ignore="RtlCompat"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddAddressZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/add_addresses_zip" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddressPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddAddressZip"
            tools:ignore="RtlCompat"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddAddressPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:hint="@string/add_addresses_phone" />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnAddAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/add_addresses_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddAddressPhone"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:background="@drawable/blue_btn_bg"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            />

</android.support.constraint.ConstraintLayout>