<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/login_padding"
        tools:context=".forgetpassword.forget.presentation.activity.ForgetPasswordActivity">

    <TextView
            android:id="@+id/tvForgetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/login_margin"
            android:textSize="@dimen/title_size"
            android:textColor="@color/colorBlack"
    />

    <RelativeLayout
            android:id="@+id/lyForgetErrorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvForgetTitle"
            android:background="@drawable/error_layout_bg"
            android:layout_marginTop="@dimen/login_margin"
            android:layout_marginBottom="@dimen/login_margin"
            android:visibility="gone"
            android:padding="@dimen/login_margin">
        <TextView
                android:id="@+id/tvForgetErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorError"
        />
    </RelativeLayout>

    <TextView
            android:id="@+id/tvForgetMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_msg"
            app:layout_constraintTop_toBottomOf="@+id/lyForgetErrorLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_40"
            android:textSize="@dimen/details_size"
            android:textColor="@color/colorPrimaryDark"

    />

    <EditText android:id="@+id/edtForgetMobile"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/rect_edittext_drawable"
              app:layout_constraintTop_toBottomOf="@id/tvForgetMsg"
              android:hint="@string/mobile_hint"
              android:layout_marginTop="@dimen/dimen_60"
              android:textSize="@dimen/edittext_text_size"
              android:singleLine="true"
              android:inputType="number"
    />

    <Button android:id="@+id/btnForgetSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dimen_60"
            app:layout_constraintTop_toBottomOf="@+id/edtForgetMobile"/>

</android.support.constraint.ConstraintLayout>